--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "gm-block-menu",
+	"name": "gm-block-actu",
 	"version": "0.1.0",
 	"description": "Block for display menu",
 	"author": "The WordPress Contributors",
@@ -14,14 +14,14 @@
 		"packages-update": "wp-scripts packages-update"
 	},
 	"dependencies": {
-		"@wordpress/block-editor": "^7.0.2",
-		"@wordpress/blocks": "^11.1.0",
-		"@wordpress/i18n": "^4.2.2"
+		"@wordpress/block-editor": "^8.0.5",
+		"@wordpress/blocks": "^11.1.4",
+		"@wordpress/i18n": "^4.2.4"
 	},
 	"devDependencies": {
-		"@wordpress/components": "^17.0.0",
-		"@wordpress/data": "^6.1.0",
-		"@wordpress/element": "^4.0.1",
-		"@wordpress/scripts": "^18.0.1"
+		"@wordpress/components": "^19.0.5",
+		"@wordpress/data": "^6.1.4",
+		"@wordpress/element": "^4.0.4",
+		"@wordpress/scripts": "^19.2.2"
 	}
 }
